minisound_ffi/lib/src/minisound_ffi_bindings.dart

// ignore_for_file: camel_case_types
// ignore_for_file: prefer_double_quotes
// ignore_for_file: non_constant_identifier_names
// ignore_for_file: constant_identifier_names
// ignore_for_file: prefer_expression_function_bodies
// ignore_for_file: sort_constructors_first
// ignore_for_file: unused_element, unused_field

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Bindings for minisound.h
class MinisoundFfiBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  MinisoundFfiBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  MinisoundFfiBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  ffi.Pointer<EncodedSoundData> encoded_sound_data_alloc() {
    return _encoded_sound_data_alloc();
  }

  late final _encoded_sound_data_allocPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<EncodedSoundData> Function()>>(
          'encoded_sound_data_alloc');
  late final _encoded_sound_data_alloc = _encoded_sound_data_allocPtr
      .asFunction<ffi.Pointer<EncodedSoundData> Function()>();

  Result encoded_sound_data_init(
    ffi.Pointer<EncodedSoundData> self,
    ffi.Pointer<ffi.Uint8> data,
    int data_size,
  ) {
    return Result.fromValue(_encoded_sound_data_init(
      self,
      data,
      data_size,
    ));
  }

  late final _encoded_sound_data_initPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<EncodedSoundData>,
              ffi.Pointer<ffi.Uint8>, ffi.Size)>>('encoded_sound_data_init');
  late final _encoded_sound_data_init = _encoded_sound_data_initPtr.asFunction<
      int Function(
          ffi.Pointer<EncodedSoundData>, ffi.Pointer<ffi.Uint8>, int)>();

  void encoded_sound_data_uninit(
    ffi.Pointer<EncodedSoundData> self,
  ) {
    return _encoded_sound_data_uninit(
      self,
    );
  }

  late final _encoded_sound_data_uninitPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<EncodedSoundData>)>>(
      'encoded_sound_data_uninit');
  late final _encoded_sound_data_uninit = _encoded_sound_data_uninitPtr
      .asFunction<void Function(ffi.Pointer<EncodedSoundData>)>();

  bool encoded_sound_data_get_is_looped(
    ffi.Pointer<EncodedSoundData> self,
  ) {
    return _encoded_sound_data_get_is_looped(
      self,
    );
  }

  late final _encoded_sound_data_get_is_loopedPtr = _lookup<
          ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<EncodedSoundData>)>>(
      'encoded_sound_data_get_is_looped');
  late final _encoded_sound_data_get_is_looped =
      _encoded_sound_data_get_is_loopedPtr
          .asFunction<bool Function(ffi.Pointer<EncodedSoundData>)>();

  void encoded_sound_data_set_looped(
    ffi.Pointer<EncodedSoundData> self,
    bool value,
    int delay_ms,
  ) {
    return _encoded_sound_data_set_looped(
      self,
      value,
      delay_ms,
    );
  }

  late final _encoded_sound_data_set_loopedPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<EncodedSoundData>, ffi.Bool,
              ffi.Size)>>('encoded_sound_data_set_looped');
  late final _encoded_sound_data_set_looped = _encoded_sound_data_set_loopedPtr
      .asFunction<void Function(ffi.Pointer<EncodedSoundData>, bool, int)>();

  SoundData encoded_sound_data_ww_sound_data(
    ffi.Pointer<EncodedSoundData> self,
  ) {
    return _encoded_sound_data_ww_sound_data(
      self,
    );
  }

  late final _encoded_sound_data_ww_sound_dataPtr = _lookup<
          ffi
          .NativeFunction<SoundData Function(ffi.Pointer<EncodedSoundData>)>>(
      'encoded_sound_data_ww_sound_data');
  late final _encoded_sound_data_ww_sound_data =
      _encoded_sound_data_ww_sound_dataPtr
          .asFunction<SoundData Function(ffi.Pointer<EncodedSoundData>)>();

  ffi.Pointer<NoiseSoundData> noise_sound_data_alloc() {
    return _noise_sound_data_alloc();
  }

  late final _noise_sound_data_allocPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<NoiseSoundData> Function()>>(
          'noise_sound_data_alloc');
  late final _noise_sound_data_alloc = _noise_sound_data_allocPtr
      .asFunction<ffi.Pointer<NoiseSoundData> Function()>();

  Result noise_sound_data_init(
    ffi.Pointer<NoiseSoundData> self,
    NoiseType type,
    int format,
    int channels,
  ) {
    return Result.fromValue(_noise_sound_data_init(
      self,
      type.value,
      format,
      channels,
    ));
  }

  late final _noise_sound_data_initPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<NoiseSoundData>, ffi.UnsignedInt,
              ffi.Int, ffi.Uint32)>>('noise_sound_data_init');
  late final _noise_sound_data_init = _noise_sound_data_initPtr
      .asFunction<int Function(ffi.Pointer<NoiseSoundData>, int, int, int)>();

  void noise_sound_data_uninit(
    ffi.Pointer<NoiseSoundData> self,
  ) {
    return _noise_sound_data_uninit(
      self,
    );
  }

  late final _noise_sound_data_uninitPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<NoiseSoundData>)>>(
      'noise_sound_data_uninit');
  late final _noise_sound_data_uninit = _noise_sound_data_uninitPtr
      .asFunction<void Function(ffi.Pointer<NoiseSoundData>)>();

  SoundData noise_sound_data_ww_sound_data(
    ffi.Pointer<NoiseSoundData> self,
  ) {
    return _noise_sound_data_ww_sound_data(
      self,
    );
  }

  late final _noise_sound_data_ww_sound_dataPtr = _lookup<
          ffi.NativeFunction<SoundData Function(ffi.Pointer<NoiseSoundData>)>>(
      'noise_sound_data_ww_sound_data');
  late final _noise_sound_data_ww_sound_data =
      _noise_sound_data_ww_sound_dataPtr
          .asFunction<SoundData Function(ffi.Pointer<NoiseSoundData>)>();

  ffi.Pointer<PulseSoundData> pulse_sound_data_alloc() {
    return _pulse_sound_data_alloc();
  }

  late final _pulse_sound_data_allocPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<PulseSoundData> Function()>>(
          'pulse_sound_data_alloc');
  late final _pulse_sound_data_alloc = _pulse_sound_data_allocPtr
      .asFunction<ffi.Pointer<PulseSoundData> Function()>();

  Result pulse_sound_data_init(
    ffi.Pointer<PulseSoundData> self,
  ) {
    return Result.fromValue(_pulse_sound_data_init(
      self,
    ));
  }

  late final _pulse_sound_data_initPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<PulseSoundData>)>>('pulse_sound_data_init');
  late final _pulse_sound_data_init = _pulse_sound_data_initPtr
      .asFunction<int Function(ffi.Pointer<PulseSoundData>)>();

  void pulse_sound_data_uninit(
    ffi.Pointer<PulseSoundData> self,
  ) {
    return _pulse_sound_data_uninit(
      self,
    );
  }

  late final _pulse_sound_data_uninitPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<PulseSoundData>)>>(
      'pulse_sound_data_uninit');
  late final _pulse_sound_data_uninit = _pulse_sound_data_uninitPtr
      .asFunction<void Function(ffi.Pointer<PulseSoundData>)>();

  double pulse_sound_data_get_freq(
    ffi.Pointer<PulseSoundData> self,
  ) {
    return _pulse_sound_data_get_freq(
      self,
    );
  }

  late final _pulse_sound_data_get_freqPtr = _lookup<
          ffi.NativeFunction<ffi.Double Function(ffi.Pointer<PulseSoundData>)>>(
      'pulse_sound_data_get_freq');
  late final _pulse_sound_data_get_freq = _pulse_sound_data_get_freqPtr
      .asFunction<double Function(ffi.Pointer<PulseSoundData>)>();

  void pulse_sound_data_set_freq(
    ffi.Pointer<PulseSoundData> self,
    double value,
  ) {
    return _pulse_sound_data_set_freq(
      self,
      value,
    );
  }

  late final _pulse_sound_data_set_freqPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<PulseSoundData>,
              ffi.Double)>>('pulse_sound_data_set_freq');
  late final _pulse_sound_data_set_freq = _pulse_sound_data_set_freqPtr
      .asFunction<void Function(ffi.Pointer<PulseSoundData>, double)>();

  double pulse_sound_data_get_duty_cycle(
    ffi.Pointer<PulseSoundData> self,
  ) {
    return _pulse_sound_data_get_duty_cycle(
      self,
    );
  }

  late final _pulse_sound_data_get_duty_cyclePtr = _lookup<
          ffi.NativeFunction<ffi.Double Function(ffi.Pointer<PulseSoundData>)>>(
      'pulse_sound_data_get_duty_cycle');
  late final _pulse_sound_data_get_duty_cycle =
      _pulse_sound_data_get_duty_cyclePtr
          .asFunction<double Function(ffi.Pointer<PulseSoundData>)>();

  void pulse_sound_data_set_duty_cycle(
    ffi.Pointer<PulseSoundData> self,
    double value,
  ) {
    return _pulse_sound_data_set_duty_cycle(
      self,
      value,
    );
  }

  late final _pulse_sound_data_set_duty_cyclePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<PulseSoundData>,
              ffi.Double)>>('pulse_sound_data_set_duty_cycle');
  late final _pulse_sound_data_set_duty_cycle =
      _pulse_sound_data_set_duty_cyclePtr
          .asFunction<void Function(ffi.Pointer<PulseSoundData>, double)>();

  SoundData pulse_sound_data_ww_sound_data(
    ffi.Pointer<PulseSoundData> self,
  ) {
    return _pulse_sound_data_ww_sound_data(
      self,
    );
  }

  late final _pulse_sound_data_ww_sound_dataPtr = _lookup<
          ffi.NativeFunction<SoundData Function(ffi.Pointer<PulseSoundData>)>>(
      'pulse_sound_data_ww_sound_data');
  late final _pulse_sound_data_ww_sound_data =
      _pulse_sound_data_ww_sound_dataPtr
          .asFunction<SoundData Function(ffi.Pointer<PulseSoundData>)>();

  ffi.Pointer<WaveformSoundData> waveform_sound_data_alloc() {
    return _waveform_sound_data_alloc();
  }

  late final _waveform_sound_data_allocPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<WaveformSoundData> Function()>>(
          'waveform_sound_data_alloc');
  late final _waveform_sound_data_alloc = _waveform_sound_data_allocPtr
      .asFunction<ffi.Pointer<WaveformSoundData> Function()>();

  Result waveform_sound_data_init(
    ffi.Pointer<WaveformSoundData> self,
    int format,
    int channels,
    int sample_rate,
  ) {
    return Result.fromValue(_waveform_sound_data_init(
      self,
      format,
      channels,
      sample_rate,
    ));
  }

  late final _waveform_sound_data_initPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<WaveformSoundData>, ffi.Int,
              ffi.Uint32, ffi.Uint32)>>('waveform_sound_data_init');
  late final _waveform_sound_data_init =
      _waveform_sound_data_initPtr.asFunction<
          int Function(ffi.Pointer<WaveformSoundData>, int, int, int)>();

  void waveform_sound_data_uninit(
    ffi.Pointer<WaveformSoundData> self,
  ) {
    return _waveform_sound_data_uninit(
      self,
    );
  }

  late final _waveform_sound_data_uninitPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<WaveformSoundData>)>>(
      'waveform_sound_data_uninit');
  late final _waveform_sound_data_uninit = _waveform_sound_data_uninitPtr
      .asFunction<void Function(ffi.Pointer<WaveformSoundData>)>();

  WaveformType waveform_sound_data_get_type(
    ffi.Pointer<WaveformSoundData> self,
  ) {
    return WaveformType.fromValue(_waveform_sound_data_get_type(
      self,
    ));
  }

  late final _waveform_sound_data_get_typePtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<WaveformSoundData>)>>('waveform_sound_data_get_type');
  late final _waveform_sound_data_get_type = _waveform_sound_data_get_typePtr
      .asFunction<int Function(ffi.Pointer<WaveformSoundData>)>();
